Adds connection to DB

--- a/SQL_Challenge_Bonus_Analysis.ipynb
+++ b/SQL_Challenge_Bonus_Analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sqlalchemy import create_engine\n",
-    "from config import username\n",
+    "from config import dbname, username, password, server\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# connect to database"
+    "# !pip install pg8000"
    ]
   },
   {
@@ -36,14 +36,117 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# ! pip install psycopg2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# connect to database\n",
+    "engine = create_engine(f'postgresql://{username}:{password}@{server}/{dbname}')\n",
+    "conn= engine.connect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dept_no</th>\n",
+       "      <th>emp_no</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>d001</td>\n",
+       "      <td>110022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>d001</td>\n",
+       "      <td>110039</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>d002</td>\n",
+       "      <td>110085</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>d002</td>\n",
+       "      <td>110114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>d003</td>\n",
+       "      <td>110183</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  dept_no  emp_no\n",
+       "0    d001  110022\n",
+       "1    d001  110039\n",
+       "2    d002  110085\n",
+       "3    d002  110114\n",
+       "4    d003  110183"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_sql(\"SELECT * FROM dept_manager\", conn)\n",
+    "data.head()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# review tables in database\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://medium.com/analytics-vidhya/postgresql-integration-with-jupyter-notebook-deb97579a38d\n"
+   ]
   },
   {
    "cell_type": "code",
