Adds table list & column list for  bar graph

--- a/SQL_Challenge_Bonus_Analysis.ipynb
+++ b/SQL_Challenge_Bonus_Analysis.ipynb
@@ -18,26 +18,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sqlalchemy import create_engine\n",
+    "from sqlalchemy import MetaData\n",
     "from config import dbname, username, password, server\n",
     "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !pip install pg8000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ! pip install psycopg2"
    ]
   },
   {
@@ -53,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -77,66 +60,94 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>dept_no</th>\n",
        "      <th>emp_no</th>\n",
+       "      <th>salary</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>d001</td>\n",
-       "      <td>110022</td>\n",
+       "      <td>10001</td>\n",
+       "      <td>60117</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>d001</td>\n",
-       "      <td>110039</td>\n",
+       "      <td>10002</td>\n",
+       "      <td>65828</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>d002</td>\n",
-       "      <td>110085</td>\n",
+       "      <td>10003</td>\n",
+       "      <td>40006</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>d002</td>\n",
-       "      <td>110114</td>\n",
+       "      <td>10004</td>\n",
+       "      <td>40054</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>d003</td>\n",
-       "      <td>110183</td>\n",
+       "      <td>10005</td>\n",
+       "      <td>78228</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  dept_no  emp_no\n",
-       "0    d001  110022\n",
-       "1    d001  110039\n",
-       "2    d002  110085\n",
-       "3    d002  110114\n",
-       "4    d003  110183"
+       "   emp_no  salary\n",
+       "0   10001   60117\n",
+       "1   10002   65828\n",
+       "2   10003   40006\n",
+       "3   10004   40054\n",
+       "4   10005   78228"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_sql(\"SELECT * FROM dept_manager\", conn)\n",
+    "# test connection\n",
+    "data = pd.read_sql(\"SELECT * FROM salaries\", conn)\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "departments\n",
+      "dept_emp\n",
+      "dept_manager\n",
+      "employees\n",
+      "salaries\n",
+      "titles\n"
+     ]
+    }
+   ],
+   "source": [
+    "# review tables in database\n",
+    "# https://stackoverflow.com/questions/21310549/list-database-tables-with-sqlalchemy/21346185\n",
+    "m = MetaData()\n",
+    "m.reflect(engine)\n",
+    "for table in m.tables.values():\n",
+    "    print(table.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# review tables in database\n"
+    "# Create a histogram to visualize the most common salary ranges for employees.\n"
    ]
   },
   {
@@ -144,30 +155,238 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Engineer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Technique Leader</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Manager</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Assistant Engineer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Staff</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Senior Engineer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Senior Staff</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                title\n",
+       "0            Engineer\n",
+       "1    Technique Leader\n",
+       "2             Manager\n",
+       "3  Assistant Engineer\n",
+       "4               Staff\n",
+       "5     Senior Engineer\n",
+       "6        Senior Staff"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# https://medium.com/analytics-vidhya/postgresql-integration-with-jupyter-notebook-deb97579a38d\n"
+    "# Create a bar chart of average salary by title.\n",
+    "# first get unique titles from titles table\n",
+    "pd.read_sql(\"SELECT distinct title from titles\", conn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title_id</th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>s0001</td>\n",
+       "      <td>Staff</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>s0002</td>\n",
+       "      <td>Senior Staff</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  title_id         title\n",
+       "0    s0001         Staff\n",
+       "1    s0002  Senior Staff"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# next create query to join salaries with title tables\n",
+    "# look at columns for title table, salaries above\n",
+    "salary = pd.read_sql_table('titles', conn)\n",
+    "salary.head(2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>emp_no</th>\n",
+       "      <th>emp_title_id</th>\n",
+       "      <th>birth_date</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>hire_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>473302</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1953-07-25</td>\n",
+       "      <td>Hideyuki</td>\n",
+       "      <td>Zallocco</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1990-04-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>475053</td>\n",
+       "      <td>e0002</td>\n",
+       "      <td>1954-11-18</td>\n",
+       "      <td>Byong</td>\n",
+       "      <td>Delgrande</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1991-09-07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   emp_no emp_title_id birth_date first_name  last_name sex  hire_date\n",
+       "0  473302        s0001 1953-07-25   Hideyuki   Zallocco   M 1990-04-28\n",
+       "1  475053        e0002 1954-11-18      Byong  Delgrande   F 1991-09-07"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# look at columns for employees, need to join off title_id\n",
+    "emp = pd.read_sql_table('employees', conn)\n",
+    "emp.head(2)"
+   ]
   },
   {
    "cell_type": "code",
